Added and fix search function to Messages.
